updated styles fixed form alignment on mobile

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ a {
   background-color: #F6F7F8;
   border: 1px solid #D6D9DC;
   border-radius: 3px;
-  width: 80%;
+  width: 85%;
   margin: 40px 0;
   padding: 50px;
 
@@ -140,7 +140,11 @@ a {
 
 .form_left {
 
-  /* padding: 10px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 0px;
+
 
 }
 
@@ -148,17 +152,18 @@ form {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: #F6F7F8;
-  border: 1px solid #D6D9DC;
+  background-color: #116ac4;
+  border: 1px solid #113e6b;
   border-radius: 3px;
-  width: 80%;
-  padding: 20px;
+  width: 85%;
+  padding: 0px;
   margin: 0 0 40px 0;
 }
 
 .form_right {
 
-  /* padding: 10px; */
+  padding: 0px;
+  border: 1px solid #116b1d;
 
 }
 
@@ -167,6 +172,8 @@ form {
   flex-direction: column;
   height: 100px;  
   padding-top: 5px;
+  width: 100%;
+  
   /* border: 1px solid red; */
 
 
@@ -174,7 +181,7 @@ form {
 
 .form_input{
   height: 30px;
-  width: 300px;
+  width: 100%;
 }
 
 .signup {
@@ -185,7 +192,7 @@ form {
   background-color: #F6F7F8;
   border: 1px solid #D6D9DC;
   border-radius: 3px;
-  width: 80%;
+  width: 85%;
   padding: 30px;
   margin: 0 0 40px 0;
 }
@@ -204,12 +211,13 @@ label {
 label{
   width: 300px;
   text-align: left;
+  padding-left: 10px;
 }
 
 .comment{
 
   color: rgba(134, 128, 128, 0.938);
-  padding: 0;
+  padding-left: 10px;
   margin: 1px;
   font-size: 17px;
 }
@@ -259,7 +267,7 @@ label{
   button {
     width: 30vw;
     margin: 20px;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .form_left {
